@@ -2,6 +2,7 @@
 2004-11-07  Pascal Scheffers  <pascal@scheffers.net>
 	* tkchat.tcl: Added jabber history loading
 	* tkchat.tcl: New history format
+	* tkchat.tcl: Add NOLOG tag to add(Message|Action) 
 	
 2004-11-05  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
